syntax = "proto3";
package qualia;
import "qualia/txn.proto";

service CacheService {
    rpc Get(GetRequest) returns (GetResponse){}
    rpc Set(SetRequest) returns (SetResponse){}
    rpc Del(DelRequest) returns (DelResponse){}
    rpc Scan(ScanRequest) returns (ScanResponse){}
}

message GetRequest {
    bytes key = 1;
}

message GetResponse {
    string status = 1;
    qualia.KeyValue value = 2;
}

message SetRequest {
    qualia.KeyValue key_value = 1;
}

message SetResponse {
    string status = 1;
}

message DelRequest {
    bytes key = 1;
}

message DelResponse {
    string status = 1;
}

message ScanRequest {
    bytes start_key = 1;
    bytes end_key = 2;
    uint32 limit = 3;
}

message ScanResponse {
    repeated qualia.KeyValue rows = 1;
}


